<resources>
    <string name="app_name">ShowTracker</string>
    <string name="empty">""</string>
    <string name="space">" "</string>
    <string name="error">An error occurred. Try again later.</string>
    <string name="undo">Undo</string>
    <string name="undone">Successfully undone</string>
    <string name="saved">Successfully saved</string>
    <string name="fill_fields">Fill all fields</string>
    <string name="repeated_title">Title is already being used</string>
    <string name="favorite">favorite</string>
    <string name="watched">Watched</string>
    <string name="show_image">Show image</string>
    <string name="genre">Genre</string>
    <string name="network">Network</string>
    <string name="favorite_shows">Favorite shows</string>
    <string name="settings">Settings</string>
    <string name="shows">Shows</string>
    <string name="upcoming_episodes">Upcoming episodes</string>
    <string name="actors">Actors</string>
    <string name="season">Season</string>
    <string name="number">Number</string>
    <string name="see_cast">See cast</string>
    <string name="add_episode">Add an episode</string>
    <string name="added">Successfully added</string>
    <string name="updated">Successfully updated</string>
    <string name="deleted">Successfully deleted</string>
    <string name="title">Title</string>
    <string name="no_actors">There are no actors listed for this show</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="add">Add</string>
    <string name="streaming_service">Streaming Service</string>
    <string name="add_actor">Add Actor</string>
    <string name="add_show">Add Show</string>
    <string name="one_selected">1 selected</string>
    <string name="selected"> selected</string>
    <string name="cancel">Cancel</string>
    <string name="episode">Episode </string>
    <string name="exist"> already exists.</string>
    <string name="delete">Delete</string>
    <string name="mark_as_favorite">Mark as Favorite</string>
    <string name="unmark_as_favorite">Unmark as Favorite</string>
</resources>