<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/favorite_24px"
        android:title="@string/mark_as_favorite"
        android:contentDescription="@string/mark_as_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/unfavorite"
        android:icon="@drawable/heart_broken_24px"
        android:title="@string/unmark_as_favorite"
        android:contentDescription="@string/unmark_as_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/delete_24px"
        android:title="@string/delete"
        android:contentDescription="@string/delete"
        app:showAsAction="ifRoom" />
</menu>